--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,13 @@
 *.war
 *.ear
 
+# Visual Studio
+.vs/
+bin/
+debug/
+*.suo
+*.user
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 .idea/
