Reorganized gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignore problem statements
+*.html
+
+# Java
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -8,6 +12,11 @@
 *.war
 *.ear
 
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+.idea/
+out/
+
 # Visual Studio
 .vs/
 bin/
@@ -15,8 +24,6 @@ debug/
 *.suo
 *.user
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-.idea/
-out/
-*.html
+# Also let's not touch VS project files for active contest
+active/TopCoder.csproj
+active/TopCoder.sln
